# jtrovoiceagent

./: .gitignore  README.md  pyproject.toml
app/jtrovoiceagent/: __init__.py  __main__.py
app/jtrovoiceagent/audio/: capture.py  devices.py
app/jtrovoiceagent/cli/: main.py
app/jtrovoiceagent/core/: config.py  constants.py  errors.py  logging.py  runtime.py
app/jtrovoiceagent/daemon/: control.py  service.py
app/jtrovoiceagent/injection/: __init__.py  base.py  command_injectors.py  factory.py
app/jtrovoiceagent/services/: pipeline.py
app/jtrovoiceagent/stt/: base.py  factory.py  faster_whisper_engine.py
app/jtrovoiceagent/translation/: __init__.py  base.py  factory.py  transformers_nllb.py
app/jtrovoiceagent/utils/: command.py  text.py
configs/: config.cpu.yaml  config.example.yaml
scripts/: control_agent.sh  download_models.sh  run_agent.sh  setup_ubuntu.sh  setup_venv.sh
systemd/: jtrovoiceagent.service
tests/: test_cli.py  test_config.py  test_runtime.py  test_text_processing.py  test_translation.py
