[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jtrovoiceagent"
version = "0.1.0"
description = "Offline Bangla-to-English Linux desktop voice typing agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "JTRO Voice Agent" }
]
dependencies = [
  "PyYAML>=6.0.1",
  "numpy>=1.26.0",
  "sounddevice>=0.4.7",
  "faster-whisper>=1.1.0",
  "transformers>=4.46.0",
  "sentencepiece>=0.2.0",
  "torch>=2.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
voice-agent = "jtrovoiceagent.cli.main:main"

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
